# affine_mpc

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: build_test.yaml  build_wheels.yaml  check_stubs.yaml  docs.yml
cmake/: affine_mpcConfig.cmake.in  extern_cnpy.cmake  extern_eigen.cmake  extern_gtest.cmake  extern_osqp.cmake  extern_pybind11.cmake
docs/: api-overview.md  concepts.md  development.md  examples.md  getting-started.md  index.md  logging.md  usage.md
docs/concepts/: index.md  input-parameterization.md  nomenclature.md  problem-formulation.md  qp-formulation.md  runtime-updates.md
docs/cpp/: getting-started.md  index.md  usage.md
docs/getting-started/: cpp.md  index.md  python.md
docs/getting_started/: cpp.md  index.md  python.md
docs/python/: getting-started.md  index.md  usage.md
examples/: plot_npz.py  plot_sim.py  plot_sim_predictions.py  plot_sim_tracking.py  sim.cpp  sim.py
include/affine_mpc/: affine_mpc.hpp  bspline_mpc.hpp  condensed_mpc.hpp  implicit_mpc.hpp  mpc_base.hpp  mpc_logger.hpp  options.hpp  osqp_solver.hpp  parameterization.hpp  solve_status.hpp  sparse_mpc.hpp
include/osqp_mpc/: implicit_mpc.hpp  mpc_base.hpp
python/: CMakeLists.txt  affine_mpc_py_module.cpp  affine_mpc_py_module.hpp  custom_stubgen.py  generate_parameterization_figs.py  py_implicit_mpc.cpp  py_mpc_base.cpp  py_mpc_logger.cpp  py_osqp_settings.cpp
python/affine_mpc/: __init__.py  _bindings.pyi  _version.py
python/affine_mpc_py/: __init__.py  _bindings.pyi
python/bindings/: affine_mpc_py_module.hpp  py_mpc_base.cpp  py_mpc_logger.cpp  py_options.cpp  py_osqp_settings.cpp  py_parameterization.cpp  py_solve_status.cpp  py_sparse_mpc.cpp
requirements/: build.txt  examples.txt
src/: bspline_mpc.cpp  condensed_mpc.cpp  eigen_compat.hpp  implicit_mpc.cpp  mpc_base.cpp  mpc_logger.cpp  npy_writer.cpp  npy_writer.hpp  npz_writer.cpp  npz_writer.hpp  options.cpp  osqp_solver.cpp  parameterization.cpp  solve_status.cpp  sparse_mpc.cpp
test/: implicit_mpc_tests.cpp  mpc_base_tests.cpp  osqp_solver_tests.cpp  utils.hpp
test/affine_mpc/: bspline_mpc_tests.cpp  condensed_mpc_tests.cpp  consistency_tests.cpp  implicit_mpc_tests.cpp  mpc_base_tests.cpp  mpc_logger_tests.cpp  np_writer_fixture.cpp  npz_writer_fixture.cpp  npz_writer_tests.cpp  osqp_solver_tests.cpp  parameterization_tests.cpp  sparse_mpc_tests.cpp  utils.hpp
test/bindings/: conftest.py  test_condensed_mpc.py  test_implicit_mpc.py  test_mpc_base.py  test_mpc_logger.py  test_npz_writer.py  test_osqp_settings.py  test_parameterization.py  test_sparse_mpc.py
test/python_npz/: conftest.py  test_np_writers.py  test_npz_writer.py
