[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "affine_mpc_py"
version = "1.0.0"
dependencies = [
    "numpy",
    "matplotlib",
]
authors = [
    {name="Mathew Haskell", email="mhaskell9@gmail.com"}
]
description="Python bindings for the affine_mpc library"
readme="README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
keywords = ["affine mpc", "mpc", "model predictive control"]

# Install these with `pip install .[dev]`
[project.optional-dependencies]
dev = [
    "pytest",
]

# This lets pip know what folders should be included / ignored
# when the package is installed.
[tool.setuptools.packages.find]
where = ["python"]

# Copy the python bindings to pip install directory, e.g. site/dist-packages
[tool.setuptools.package-data]
affine_mpc_py = ["*.so"]
